<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Advanced_lvl">

    <TextView
        android:id="@+id/txt_advanced_text"
        android:layout_width="337dp"
        android:layout_height="42dp"
        android:layout_marginTop="136dp"
        android:text="@string/txt_advanced_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="textPersonName|text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_advanced_text"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="Country for Second Flag"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="Country for Thrid Flag"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="79dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="292dp"
        android:text="@string/txt_advancedflag1"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_advanced_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_advancedflag2"
        android:layout_width="79sp"
        android:layout_height="30sp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="292dp"
        android:text="@string/txt_advancedflag2"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_advancedflag3"
        android:layout_width="79sp"
        android:layout_height="30sp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="220dp"
        android:text="@string/txt_advancedflag3"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/txt_advancedflag2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="172dp"
        android:text="@string/bt_advanced1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_advanced_text"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/advancedimage1"
        android:layout_width="110dp"
        android:layout_height="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/advancedimage2"
        android:layout_width="110dp"
        android:layout_height="138dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/advancedimage3"
        android:layout_width="110dp"
        android:layout_height="134dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt_advancedCorrectAnswer1"
        android:layout_width="278dp"
        android:layout_height="27dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/txt_advancedCorrectAnswer2"
        android:layout_width="278dp"
        android:layout_height="27dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/txt_advancedCorrectAnswer3"
        android:layout_width="278dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text=""
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/txt_advacedstatus3"
        android:layout_width="278dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_advancedCorrectAnswer3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_advacedstatus2"
        android:layout_width="278dp"
        android:layout_height="27dp"
        android:layout_marginEnd="24dp"
        android:text=""
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_advancedCorrectAnswer2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_advacedstatus1"
        android:layout_width="278dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text=""
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_advancedCorrectAnswer1"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>